--- a/index.html
+++ b/index.html
@@ -11,6 +11,31 @@
     <link type="text/css" rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <!-- Welcome -->
+    <section id="welcome">
+        <h1>Welcome to Bored Tube</h1>
+        <p>Do you want to discover something new to try or learn?</p>
+        <button type="button" class="btn btn-outline-info">Find Something New</button>
+
+    </section>
+
+    <!-- Choosing the type of activity -->
+    <section id="activityType">
+        <h2>Choose a category you are interested in</h2>
+        <div>
+            <button>Education</button>
+            <button>Recreational</button>
+            <button>Social</button>
+            <button>DIY</button>
+            <button>Charity</button>
+            <button>Cooking</button>
+            <button>Relaxation</button>
+            <button>Music</button>
+        </div>
+    </section>
+
+
+
     
 </body>
 </html>
