search results section addedin html

--- a/index.html
+++ b/index.html
@@ -51,9 +51,24 @@
     <!-- Free or paid -->
     <section id="freePaid">
       <h2>Do you prefer a free or paid activity?</h2>
-      
-
+      <div class="options">
+        <button>Free</button>
+        <button>Paid</button>
+      </div>
     </section>
+
+    <!-- Search results  -->
+    <div class="swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide swiper-slide-one"></div>
+        <div class="swiper-slide swiper-slide-two"></div>
+        <div class="swiper-slide swiper-slide-three"></div>
+        <div class="swiper-slide swiper-slide-four"></div>
+        <div class="swiper-slide swiper-slide-five"></div>
+      </div>
+    </div>
+    <!-- add pagination -->
+    <div class="swiper-pagination"></div>
 
 
 
