--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Activity Video Finder</title>
 </head>
 <body>
     <h1>Find Videos for Random Activities</h1>
-    <button id="generate">Generate Random Activity</button>
+    <br/>
+    <button id="generate" type="button" class="btn btn-lg btn-outline-primary">Generate Random Activity</button>
     <p id="activity"></p>
     <div id="carousel">
         <!-- YouTube videos will be appended here dynamically -->
     </div>
-    <button id="prev">Previous</button>
-    <button id="next">Next</button>
+    <button id="prev" type="button" class="btn btn-outline-info">Previous</button>
+    <button id="next" type="button" class="btn btn-outline-info">Next </button>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
